syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-recipe/api/proto/v1";

message DeleteCollectionRequest {
  string userId = 1;
  string collectionId = 2;
}

message DeleteCollectionResponse {
  string message = 1;
}
